@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2020 the original author or authors.
+ * Copyright 2002-2021 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -25,9 +25,8 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 
-import javax.servlet.jsp.JspException;
-import javax.servlet.jsp.tagext.Tag;
-
+import jakarta.servlet.jsp.JspException;
+import jakarta.servlet.jsp.tagext.Tag;
 import org.dom4j.Document;
 import org.dom4j.Element;
 import org.dom4j.io.SAXReader;
@@ -49,7 +48,7 @@ import static org.assertj.core.api.Assertions.assertThatIllegalArgumentException
  * @author Jeremy Grelle
  */
 @SuppressWarnings({ "rawtypes", "unchecked" })
-public class CheckboxTagTests extends AbstractFormTagTests {
+class CheckboxTagTests extends AbstractFormTagTests {
 
 	private CheckboxTag tag;
 
@@ -68,7 +67,7 @@ public class CheckboxTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	public void withSingleValueBooleanObjectChecked() throws Exception {
+	void withSingleValueBooleanObjectChecked() throws Exception {
 		this.tag.setPath("someBoolean");
 		int result = this.tag.doStartTag();
 		assertThat(result).isEqualTo(Tag.SKIP_BODY);
@@ -91,7 +90,7 @@ public class CheckboxTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	public void withIndexedBooleanObjectNotChecked() throws Exception {
+	void withIndexedBooleanObjectNotChecked() throws Exception {
 		this.tag.setPath("someMap[key]");
 		int result = this.tag.doStartTag();
 		assertThat(result).isEqualTo(Tag.SKIP_BODY);
@@ -114,7 +113,7 @@ public class CheckboxTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	public void withSingleValueBooleanObjectCheckedAndDynamicAttributes() throws Exception {
+	void withSingleValueBooleanObjectCheckedAndDynamicAttributes() throws Exception {
 		String dynamicAttribute1 = "attr1";
 		String dynamicAttribute2 = "attr2";
 
@@ -144,7 +143,7 @@ public class CheckboxTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	public void withSingleValueBooleanChecked() throws Exception {
+	void withSingleValueBooleanChecked() throws Exception {
 		this.tag.setPath("jedi");
 		int result = this.tag.doStartTag();
 		assertThat(result).isEqualTo(Tag.SKIP_BODY);
@@ -164,7 +163,7 @@ public class CheckboxTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	public void withSingleValueBooleanObjectUnchecked() throws Exception {
+	void withSingleValueBooleanObjectUnchecked() throws Exception {
 		this.bean.setSomeBoolean(Boolean.FALSE);
 		this.tag.setPath("someBoolean");
 		int result = this.tag.doStartTag();
@@ -186,7 +185,7 @@ public class CheckboxTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	public void withSingleValueBooleanUnchecked() throws Exception {
+	void withSingleValueBooleanUnchecked() throws Exception {
 		this.bean.setJedi(false);
 		this.tag.setPath("jedi");
 		int result = this.tag.doStartTag();
@@ -208,7 +207,7 @@ public class CheckboxTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	public void withSingleValueNull() throws Exception {
+	void withSingleValueNull() throws Exception {
 		this.bean.setName(null);
 		this.tag.setPath("name");
 		this.tag.setValue("Rob Harrop");
@@ -231,7 +230,7 @@ public class CheckboxTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	public void withSingleValueNotNull() throws Exception {
+	void withSingleValueNotNull() throws Exception {
 		this.bean.setName("Rob Harrop");
 		this.tag.setPath("name");
 		this.tag.setValue("Rob Harrop");
@@ -254,7 +253,7 @@ public class CheckboxTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	public void withSingleValueAndEditor() throws Exception {
+	void withSingleValueAndEditor() throws Exception {
 		this.bean.setName("Rob Harrop");
 		this.tag.setPath("name");
 		this.tag.setValue("   Rob Harrop");
@@ -281,7 +280,7 @@ public class CheckboxTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	public void withMultiValueChecked() throws Exception {
+	void withMultiValueChecked() throws Exception {
 		this.tag.setPath("stringArray");
 		this.tag.setValue("foo");
 		int result = this.tag.doStartTag();
@@ -303,7 +302,7 @@ public class CheckboxTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	public void withMultiValueUnchecked() throws Exception {
+	void withMultiValueUnchecked() throws Exception {
 		this.tag.setPath("stringArray");
 		this.tag.setValue("abc");
 		int result = this.tag.doStartTag();
@@ -325,7 +324,7 @@ public class CheckboxTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	public void withMultiValueWithEditor() throws Exception {
+	void withMultiValueWithEditor() throws Exception {
 		this.tag.setPath("stringArray");
 		this.tag.setValue("   foo");
 		BeanPropertyBindingResult bindingResult = new BeanPropertyBindingResult(this.bean, COMMAND_NAME);
@@ -353,7 +352,7 @@ public class CheckboxTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	public void withMultiValueIntegerWithEditor() throws Exception {
+	void withMultiValueIntegerWithEditor() throws Exception {
 		this.tag.setPath("someIntegerArray");
 		this.tag.setValue("   1");
 		BeanPropertyBindingResult bindingResult = new BeanPropertyBindingResult(this.bean, COMMAND_NAME);
@@ -381,7 +380,7 @@ public class CheckboxTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	public void withCollection() throws Exception {
+	void withCollection() throws Exception {
 		this.tag.setPath("someList");
 		this.tag.setValue("foo");
 		int result = this.tag.doStartTag();
@@ -403,7 +402,7 @@ public class CheckboxTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	public void withObjectChecked() throws Exception {
+	void withObjectChecked() throws Exception {
 		this.tag.setPath("date");
 		this.tag.setValue(getDate());
 
@@ -426,7 +425,7 @@ public class CheckboxTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	public void withObjectUnchecked() throws Exception {
+	void withObjectUnchecked() throws Exception {
 		this.tag.setPath("date");
 		Date date = new Date();
 		this.tag.setValue(date);
@@ -450,7 +449,7 @@ public class CheckboxTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	public void collectionOfColoursSelected() throws Exception {
+	void collectionOfColoursSelected() throws Exception {
 		this.tag.setPath("otherColours");
 		this.tag.setValue("RED");
 
@@ -472,7 +471,7 @@ public class CheckboxTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	public void collectionOfColoursNotSelected() throws Exception {
+	void collectionOfColoursNotSelected() throws Exception {
 		this.tag.setPath("otherColours");
 		this.tag.setValue("PURPLE");
 
@@ -494,7 +493,7 @@ public class CheckboxTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	public void collectionOfPetsAsString() throws Exception {
+	void collectionOfPetsAsString() throws Exception {
 		this.tag.setPath("pets");
 		this.tag.setValue("Spot");
 
@@ -516,7 +515,7 @@ public class CheckboxTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	public void collectionOfPetsAsStringNotSelected() throws Exception {
+	void collectionOfPetsAsStringNotSelected() throws Exception {
 		this.tag.setPath("pets");
 		this.tag.setValue("Santa's Little Helper");
 
@@ -538,7 +537,7 @@ public class CheckboxTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	public void collectionOfPets() throws Exception {
+	void collectionOfPets() throws Exception {
 		this.tag.setPath("pets");
 		this.tag.setValue(new Pet("Rudiger"));
 
@@ -561,7 +560,7 @@ public class CheckboxTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	public void collectionOfPetsNotSelected() throws Exception {
+	void collectionOfPetsNotSelected() throws Exception {
 		this.tag.setPath("pets");
 		this.tag.setValue(new Pet("Santa's Little Helper"));
 
@@ -584,7 +583,7 @@ public class CheckboxTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	public void collectionOfPetsWithEditor() throws Exception {
+	void collectionOfPetsWithEditor() throws Exception {
 		this.tag.setPath("pets");
 		this.tag.setValue(new ItemPet("Rudiger"));
 
@@ -612,14 +611,14 @@ public class CheckboxTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	public void withNullValue() throws Exception {
+	void withNullValue() throws Exception {
 		this.tag.setPath("name");
 		assertThatIllegalArgumentException().as("null value binding to a non-boolean").isThrownBy(
 				this.tag::doStartTag);
 	}
 
 	@Test
-	public void hiddenElementOmittedOnDisabled() throws Exception {
+	void hiddenElementOmittedOnDisabled() throws Exception {
 		this.tag.setPath("someBoolean");
 		this.tag.setDisabled(true);
 		int result = this.tag.doStartTag();
@@ -642,7 +641,7 @@ public class CheckboxTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	public void dynamicTypeAttribute() throws JspException {
+	void dynamicTypeAttribute() throws JspException {
 		assertThatIllegalArgumentException().isThrownBy(() ->
 				this.tag.setDynamicAttribute(null, "type", "email"))
 			.withMessage("Attribute type=\"email\" is not allowed");
@@ -718,7 +717,7 @@ public class CheckboxTagTests extends AbstractFormTagTests {
 		@Override
 		public void setAsText(String text) {
 			this.count++;
-			setValue(new Integer(text.trim()));
+			setValue(Integer.valueOf(text.trim()));
 		}
 	}
 
